--- a/contact-us.html
+++ b/contact-us.html
@@ -12,45 +12,41 @@
 <body>
     <header>
         <img class="logo" src="assets/images/logo.png" alt="logo"> 
-        <nav class="navigation-bar">  
+            <nav class="navigation-bar">  
                 <ul>    
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about-us.html">About Us</a></li>
                     <li><a href="rehoming-a-cat.html">Rehoming A Cat</a></li>
                     <li><a href="contact-us.html">Contact Us</a></li>
                 </ul>
-        </nav>
+            </nav>
     </header>
 <br>
     <main>
-    <h1>Contact Us</h1>
-
-    <div>
-        <p>
-            If you are thinking of rehoming one of our cats or have any questions, please contact us using to form below. We aim to reply to all enquiries within 3 working days.
-        </p>
-    </div>
-    <br>
-<div class="form-container">
-    <form>
-        <label for="name">Full Name</label>
-        <input id="name" type="text" autocomplete="name">
-        <label for="email">Email Address</label>
-        <input id="email" type="text" autocomplete="email">
-        <label for="contact-number">Contact Number</label>
-        <input id="contact-number" type="number">
-        <label for="enquiry">Your Enquiry</label>
-        <textarea name="enquiry" id="enquiry" rows="10" cols="40"></textarea>
-        <input type="submit" value="Submit"/>
-    </form>
-    
-</div>    
-</main>
+        <h1>Contact Us</h1>
+            <div>
+                <p>
+                    If you are thinking of rehoming one of our cats or have any questions, please contact us using to form below. We aim to reply to all enquiries within 3 working days.
+                </p>
+            </div>
+<br>
+        <div class="form-container">
+            <form>
+                <label for="name">Full Name</label>
+                <input id="name" type="text" autocomplete="name">
+                <label for="email">Email Address</label>
+                <input id="email" type="text" autocomplete="email">
+                <label for="contact-number">Contact Number</label>
+                <input id="contact-number" type="number">
+                <label for="enquiry">Your Enquiry</label>
+                <textarea name="enquiry" id="enquiry" rows="10" cols="40"></textarea>
+                <input type="submit" value="Submit"/>
+            </form>   
+        </div>    
+    </main>
 <br>
     <footer>
-        <p>
-            Toe Beans Cat Rescue | Website for educational purposes only | Designed by Georgina Phipps 🐾
-        </p>
+        <p>Toe Beans Cat Rescue | Website for educational purposes only | Designed by Georgina Phipps 🐾</p>
     </footer>
 </body>
 </html>
