--- a/about-us.html
+++ b/about-us.html
@@ -12,35 +12,33 @@
     <header>
         <img class="logo" src="assets/images/logo.png" alt="logo"> 
         <nav class="navigation-bar">  
-                <ul>    
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about-us.html">About Us</a></li>
-                    <li><a href="rehoming-a-cat.html">Rehoming A Cat</a></li>
-                    <li><a href="contact-us.html">Contact Us</a></li>
-                </ul>
+            <ul>    
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about-us.html">About Us</a></li>
+                <li><a href="rehoming-a-cat.html">Rehoming A Cat</a></li>
+                <li><a href="contact-us.html">Contact Us</a></li>
+            </ul>
         </nav>
     </header>
 <br>
     <main>
-    <div>
-        <img class="hero-image-3" src="assets/images/hero-image-3.png" alt="Three cats sleeping">
-    </div>
+        <div>
+            <img class="hero-image-3" src="assets/images/hero-image-3.png" alt="Three cats sleeping">
+        </div>
 
-    <h1>About Us</h1>
+        <h1>About Us</h1>
 
-    <div>
-        <p>Welcome to Toe Beans, where passion meets purpose in our mission to make a difference in the lives of our feline friends.</p>
-        <p>At Toe Beans Cat Rescue, we believe that every cat deserves a loving home and a chance to thrive. Our journey began with a shared love for these whiskered wonders and a commitment to creating a world where no kitty is left behind.</p>
-        <p>Founded with a heart full of compassion and a desire to make a lasting impact, Toe Beans Cat Rescue is dedicated to the well-being of cats in need. We are a non-profit organization driven by a team of devoted volunteers who pour their time, energy, and love into every furry friend we encounter. From abandoned kittens to senior cats looking for a second chance, we are here to provide a safe haven and a helping hand.</p>
-        <p>Toe Beans Cat Rescue is more than just a charity; it's a community united by the common goal of creating a brighter future for cats in distress. With every rescue, adoption, and outreach effort, we strive to raise awareness about responsible pet ownership, spaying and neutering, and the importance of treating our feline companions with the love and respect they deserve.</p>
-        <p>Our journey is marked by the joy of successful adoptions, the resilience of our rescue stories, and the camaraderie of our passionate supporters. Join us in the pursuit of a world where every cat is cherished and every toe bean is appreciated. Together, we can make a paw-sitive impact, one rescue at a time.</p>
-    </div>
-</main>
+        <div>
+            <p>Welcome to Toe Beans, where passion meets purpose in our mission to make a difference in the lives of our feline friends.</p>
+            <p>At Toe Beans Cat Rescue, we believe that every cat deserves a loving home and a chance to thrive. Our journey began with a shared love for these whiskered wonders and a commitment to creating a world where no kitty is left behind.</p>
+            <p>Founded with a heart full of compassion and a desire to make a lasting impact, Toe Beans Cat Rescue is dedicated to the well-being of cats in need. We are a non-profit organization driven by a team of devoted volunteers who pour their time, energy, and love into every furry friend we encounter. From abandoned kittens to senior cats looking for a second chance, we are here to provide a safe haven and a helping hand.</p>
+            <p>Toe Beans Cat Rescue is more than just a charity; it's a community united by the common goal of creating a brighter future for cats in distress. With every rescue, adoption, and outreach effort, we strive to raise awareness about responsible pet ownership, spaying and neutering, and the importance of treating our feline companions with the love and respect they deserve.</p>
+            <p>Our journey is marked by the joy of successful adoptions, the resilience of our rescue stories, and the camaraderie of our passionate supporters. Join us in the pursuit of a world where every cat is cherished and every toe bean is appreciated. Together, we can make a paw-sitive impact, one rescue at a time.</p>
+        </div>
+    </main>
 <br>
     <footer>
-        <p>
-            Toe Beans Cat Rescue | Website for educational purposes only | Designed by Georgina Phipps 🐾
-        </p>
+        <p>Toe Beans Cat Rescue | Website for educational purposes only | Designed by Georgina Phipps 🐾</p>
     </footer>
 </body>
 </html>
